--- a/package.json
+++ b/package.json
@@ -18,29 +18,25 @@
         "watch:to:lib": "lerna run watch:to:lib --parallel",
         "watch:to:app": "lerna run watch:to:app --parallel",
         "watch:to:app:types": "lerna run watch:to:app:types --parallel",
+        "publish": "lerna publish",
         "publish:npm": "lerna run publish --parallel",
         "publish:git": "lerna publish from-git",
-        "publish:pkg": "lerna publish from-package --access=public",
+        "publish:pkg": "lerna publish from-package",
         "generate:package": "node ./tools/scripts/generate-package.js package-name",
         "eslint": "eslint ./packages --max-warnings 0",
         "lerna": "lerna"
     },
-    "husky": {
-        "hooks": {
-            "pre-commit": "npm run eslint"
-        }
-    },
     "dependencies": {
-        "react": "18.0.0",
-        "react-dom": "17.0.2"
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
     },
     "devDependencies": {
         "@babel/core": "7.13.14",
         "@babel/plugin-proposal-export-default-from": "7.12.13",
         "@babel/preset-env": "7.13.12",
         "@babel/preset-react": "7.13.13",
-        "@types/react": "17.0.3",
-        "@types/react-dom": "17.0.3",
+        "@types/react": "18.0.15",
+        "@types/react-dom": "18.0.6",
         "@typescript-eslint/eslint-plugin": "4.21.0",
         "@typescript-eslint/parser": "4.21.0",
         "autoprefixer": "10.2.5",
@@ -61,8 +57,7 @@
         "eslint-plugin-react": "7.23.1",
         "eslint-plugin-react-hooks": "4.2.0",
         "eslint-webpack-plugin": "2.5.3",
-        "husky": "4.2.5",
-        "lerna": "4.0.0",
+        "lerna": "5.2.0",
         "ts-loader": "9.1.0",
         "typescript": "4.2.3",
         "webpack": "5.59.1",
