--- a/packages/portal/package.json
+++ b/packages/portal/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@react-ssr-pack/portal",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Portal - Component for server side rendering React-portals",
     "main": "./lib/index.js",
     "types": "./lib/index.d.ts",
@@ -9,6 +9,9 @@
     "repository": {
         "type": "git",
         "url": "git@github.com:frolant/react-ssr-pack.git"
+    },
+    "publishConfig": {
+        "access": "public"
     },
     "browserslist": [
         "last 2 versions"
@@ -21,6 +24,6 @@
     },
     "peerDependencies": {
         "react": "^18.0.0",
-        "react-dom": "^17.0.2"
+        "react-dom": "^18.0.0"
     }
 }
