--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,12 +20,12 @@
         "watch:to:app:types": "node ../../run watch-to-app-types server isNodeTarget"
     },
     "dependencies": {
-        "express": "4.17.2",
-        "prom-client": "14.0.1",
-        "redux": "4.0.5"
+        "express": "^4.17.2",
+        "prom-client": "^14.0.1",
+        "redux": "^4.2.0"
     },
     "devDependencies": {
-        "@types/express": "4.17.13"
+        "@types/express": "^4.17.13"
     },
     "peerDependencies": {
         "react": "^18.0.0"
