--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -20,9 +20,9 @@
         "watch:to:app:types": "node ../../run watch-to-app-types tools"
     },
     "devDependencies": {
-        "@types/react-dom": "17.0.2"
+        "@types/react-dom": "^18.0.6"
     },
     "peerDependencies": {
-        "react-dom": "^17.0.2"
+        "react-dom": "^18.0.0"
     }
 }
