--- a/packages/resolve-plugin/package.json
+++ b/packages/resolve-plugin/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@react-ssr-pack/resolve-plugin",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Webpack resolve plugin for resolving react-proxy in React SSR application based on React v18 and @react-ssr-pack",
     "main": "./lib/index.js",
     "author": "Anton Frolov",
@@ -16,6 +16,6 @@
         "watch:to:app:types": "echo Watch mode not supported && exit 1"
     },
     "dependencies": {
-        "@react-ssr-pack/react-proxy": "1.0.2"
+        "@react-ssr-pack/react-proxy": "^1.0.3"
     }
 }
