--- a/tools/templates/tsconfig.json
+++ b/tools/templates/tsconfig.json
@@ -4,6 +4,6 @@
         "outDir": "lib"
     },
     "include": [
-        "../../packages/${packageName}"
+        "../../packages/${packageName}/src"
     ]
 }
