--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
         "last 2 versions"
     ],
     "scripts": {
-        "init": "npm install --silent --no-audit --no-fund --no-save && lerna clean --yes && lerna bootstrap --hoist -- --no-package-lock && node ./tools/scripts/initialize-local-config.js",
-        "build": "lerna run build",
-        "watch": "node ./tools/scripts/start-configured-watch.js",
-        "watch:to:lib": "lerna run watch:to:lib --parallel",
-        "watch:to:app": "lerna run watch:to:app --parallel",
-        "watch:to:app:types": "lerna run watch:to:app:types --parallel",
+        "init": "npm install --silent --no-audit --no-fund --no-save && lerna clean --yes && lerna bootstrap --hoist -- --no-package-lock && node ./tools/initialize-local-config.js",
+        "build": "lerna run build --stream",
+        "watch": "node ./tools/start-configured-watch.js",
+        "watch:to:lib": "lerna run watch:to:lib --parallel --stream",
+        "watch:to:app": "lerna run watch:to:app --parallel --stream",
         "publish": "npm run init && npm run build && npm run eslint && lerna publish",
         "publish:git": "npm run init && npm run build && npm run eslint && lerna publish from-git",
         "publish:pkg": "npm run init && npm run build && npm run eslint && lerna publish from-package",
-        "generate:package": "node ./tools/scripts/generate-package.js package-name",
+        "generate:package": "node ./tools/generate-package.js package-name",
         "eslint": "eslint ./packages --max-warnings 0",
         "lerna": "lerna"
     },
@@ -30,37 +29,32 @@
         "react-dom": "18.2.0"
     },
     "devDependencies": {
-        "@babel/core": "7.13.14",
-        "@babel/plugin-proposal-export-default-from": "7.12.13",
-        "@babel/preset-env": "7.13.12",
-        "@babel/preset-react": "7.13.13",
-        "@types/react": "18.0.15",
-        "@types/react-dom": "18.0.6",
-        "@typescript-eslint/eslint-plugin": "4.21.0",
-        "@typescript-eslint/parser": "4.21.0",
-        "autoprefixer": "10.2.5",
-        "babel-eslint": "10.1.0",
-        "babel-loader": "8.2.2",
+        "@babel/core": "7.21.4",
+        "@babel/plugin-proposal-export-default-from": "7.18.10",
+        "@babel/preset-env": "7.21.4",
+        "@babel/preset-react": "7.18.6",
+        "@types/react": "18.0.33",
+        "@types/react-dom": "18.0.11",
+        "@typescript-eslint/eslint-plugin": "5.57.1",
+        "@typescript-eslint/parser": "5.57.1",
+        "babel-loader": "9.1.2",
         "case-sensitive-paths-webpack-plugin": "2.4.0",
-        "clean-webpack-plugin": "3.0.0",
-        "compression-webpack-plugin": "7.1.2",
-        "copy-webpack-plugin": "8.1.0",
-        "dotenv": "8.2.0",
-        "eslint": "7.23.0",
-        "eslint-config-airbnb": "18.2.1",
-        "eslint-config-airbnb-typescript": "12.3.1",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-jsdoc": "32.3.0",
-        "eslint-plugin-jsx-a11y": "6.4.1",
+        "clean-webpack-plugin": "4.0.0",
+        "eslint": "8.37.0",
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-config-airbnb-typescript": "17.0.0",
+        "eslint-plugin-import": "2.27.5",
+        "eslint-plugin-jsdoc": "40.1.1",
+        "eslint-plugin-jsx-a11y": "6.7.1",
         "eslint-plugin-prefer-arrow": "1.2.3",
-        "eslint-plugin-react": "7.23.1",
-        "eslint-plugin-react-hooks": "4.2.0",
-        "eslint-webpack-plugin": "2.5.3",
-        "lerna": "5.2.0",
-        "ts-loader": "9.1.0",
-        "typescript": "4.2.3",
-        "webpack": "5.59.1",
-        "webpack-cli": "4.9.1",
-        "webpack-node-externals": "2.5.2"
+        "eslint-plugin-react": "7.32.2",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "eslint-webpack-plugin": "3.2.0",
+        "lerna": "6.6.1",
+        "ts-loader": "9.4.2",
+        "typescript": "5.0.3",
+        "webpack": "5.78.0",
+        "webpack-cli": "5.0.1",
+        "webpack-node-externals": "3.0.0"
     }
 }
