--- a/packages/babel-plugin/package.json
+++ b/packages/babel-plugin/package.json
@@ -13,10 +13,9 @@
         "access": "public"
     },
     "scripts": {
-        "build": "node ../../tools/scripts/update-library-from-source  babel-plugin",
+        "build": "node ../../tools/update-library-from-source  babel-plugin",
         "watch:to:lib": "echo Watch mode not supported && exit 1",
-        "watch:to:app": "echo Watch mode not supported && exit 1",
-        "watch:to:app:types": "echo Watch mode not supported && exit 1"
+        "watch:to:app": "echo Watch mode not supported && exit 1"
     },
     "dependencies": {
         "md5": "^2.3.0"
