--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,16 +19,15 @@
     "scripts": {
         "build": "node ../../run build server isNodeTarget",
         "watch:to:lib": "node ../../run watch-to-lib server isNodeTarget",
-        "watch:to:app": "node ../../run watch-to-app server isNodeTarget",
-        "watch:to:app:types": "node ../../run watch-to-app-types server isNodeTarget"
+        "watch:to:app": "node ../../run watch-to-app server isNodeTarget"
     },
     "dependencies": {
-        "express": "^4.17.2"
+        "express": "^4.18.2"
     },
     "devDependencies": {
-        "@types/express": "^4.17.13"
+        "@types/express": "^4.17.17"
     },
     "peerDependencies": {
-        "react": "^18.0.0"
+        "react": "^18.2.0"
     }
 }
