--- a/package.json
+++ b/package.json
@@ -12,19 +12,16 @@
         "last 2 versions"
     ],
     "scripts": {
-        "init": "npm install --silent --no-audit --no-fund --no-save && lerna clean --yes && lerna bootstrap --hoist -- --no-package-lock && node ./tools/initialize-local-config.js",
+        "init": "npm install --silent --no-audit --no-fund --no-save && node ./tools/initialize-local-config.js",
         "build": "lerna run build --stream",
         "start": "cd ./example && npm run app:hot",
         "watch": "node ./tools/start-configured-watch.js",
         "watch:to:lib": "lerna run watch:to:lib --parallel --stream",
         "watch:to:app": "lerna run watch:to:app --parallel --stream",
         "publish": "npm run init && npm run build && npm run stylelint && npm run eslint && lerna publish --no-private",
-        "publish:git": "npm run init && npm run build && npm run stylelint && npm run eslint && lerna publish from-git --no-private",
-        "publish:pkg": "npm run init && npm run build && npm run stylelint && npm run eslint && lerna publish from-package --no-private",
         "generate:package": "node ./tools/generate-package.js package-name",
         "stylelint": "stylelint ./{packages/**/src,example/src}/**/*.{css,scss} --max-warnings 0",
-        "eslint": "eslint ./packages --max-warnings 0",
-        "lerna": "lerna"
+        "eslint": "eslint ./packages --max-warnings 0"
     },
     "dependencies": {
         "react": "18.2.0",
@@ -32,32 +29,36 @@
         "react-redux": "8.0.5"
     },
     "devDependencies": {
-        "@babel/core": "7.21.4",
-        "@babel/plugin-proposal-export-default-from": "7.18.10",
-        "@babel/preset-env": "7.21.4",
-        "@babel/preset-react": "7.18.6",
-        "@types/react": "18.0.37",
-        "@types/react-dom": "18.0.11",
-        "@typescript-eslint/eslint-plugin": "5.57.1",
-        "@typescript-eslint/parser": "5.57.1",
+        "@babel/core": "7.22.5",
+        "@babel/plugin-proposal-export-default-from": "7.22.5",
+        "@babel/preset-env": "7.22.5",
+        "@babel/preset-react": "7.22.5",
+        "@types/react": "18.2.12",
+        "@types/react-dom": "18.2.5",
+        "@typescript-eslint/eslint-plugin": "5.59.11",
+        "@typescript-eslint/parser": "5.59.11",
         "babel-loader": "9.1.2",
         "case-sensitive-paths-webpack-plugin": "2.4.0",
         "clean-webpack-plugin": "4.0.0",
-        "eslint": "8.37.0",
+        "eslint": "8.42.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "17.0.0",
         "eslint-plugin-import": "2.27.5",
-        "eslint-plugin-jsdoc": "40.1.1",
+        "eslint-plugin-jsdoc": "46.2.6",
         "eslint-plugin-jsx-a11y": "6.7.1",
         "eslint-plugin-prefer-arrow": "1.2.3",
         "eslint-plugin-react": "7.32.2",
         "eslint-plugin-react-hooks": "4.6.0",
         "eslint-webpack-plugin": "3.2.0",
-        "lerna": "6.6.1",
-        "ts-loader": "9.4.2",
-        "typescript": "5.0.3",
-        "webpack": "5.78.0",
-        "webpack-cli": "5.0.1",
+        "lerna": "7.0.2",
+        "ts-loader": "9.4.3",
+        "typescript": "5.0.4",
+        "webpack": "5.86.0",
+        "webpack-cli": "5.1.4",
         "webpack-node-externals": "3.0.0"
-    }
+    },
+    "workspaces": [
+        "packages/*",
+        "example"
+    ]
 }
