--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-ssr-pack-example",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "React SSR Pack - Example Application",
     "main": "./lib/index.js",
     "types": "./lib/index.d.ts",
@@ -29,7 +29,7 @@
         "@babel/runtime": "7.22.5",
         "@react-ssr-pack/server": "*",
         "@react-ssr-pack/server-checker": "*",
-        "@react-ssr-pack/tools": "*",
+        "@react-ssr-pack/tools": "1.0.11",
         "classnames": "2.3.2",
         "history": "4.10.1",
         "html-react-parser": "3.0.4",
@@ -52,8 +52,8 @@
         "@babel/preset-env": "7.22.5",
         "@babel/preset-react": "7.22.5",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-        "@react-ssr-pack/babel-plugin": "*",
-        "@react-ssr-pack/resolve-plugin": "*",
+        "@react-ssr-pack/babel-plugin": "1.0.11",
+        "@react-ssr-pack/resolve-plugin": "1.0.15",
         "@types/history": "4.7.9",
         "@types/react": "18.2.12",
         "@types/react-dom": "18.2.5",
