--- a/example/package.json
+++ b/example/package.json
@@ -32,17 +32,17 @@
         "@react-ssr-pack/tools": "1.0.12",
         "classnames": "2.3.2",
         "history": "4.10.1",
-        "html-react-parser": "3.0.4",
+        "html-react-parser": "5.2.2",
         "normalize.css": "8.0.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-helmet-async": "1.3.0",
-        "react-redux": "8.0.5",
+        "react": "19.0.0",
+        "react-dom": "19.0.0",
+        "react-helmet-async": "npm:@slorber/react-helmet-async@1.3.0",
+        "react-redux": "9.2.0",
         "react-router": "5.3.4",
         "react-router-dom": "5.3.4",
-        "redux": "4.2.1",
-        "redux-actions": "3.0.0",
-        "redux-saga": "1.2.3",
+        "redux": "5.0.1",
+        "redux-actions": "3.0.3",
+        "redux-saga": "1.3.0",
         "superagent": "8.0.9"
     },
     "devDependencies": {
@@ -50,13 +50,13 @@
         "@babel/plugin-proposal-export-default-from": "7.22.5",
         "@babel/plugin-transform-runtime": "7.22.5",
         "@babel/preset-env": "7.22.5",
-        "@babel/preset-react": "7.22.5",
+        "@babel/preset-react": "7.26.3",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
         "@react-ssr-pack/babel-plugin": "1.0.13",
         "@react-ssr-pack/resolve-plugin": "1.0.17",
         "@types/history": "4.7.9",
-        "@types/react": "18.2.12",
-        "@types/react-dom": "18.2.5",
+        "@types/react": "19.0.8",
+        "@types/react-dom": "19.0.3",
         "@types/react-router": "5.1.20",
         "@types/react-router-dom": "5.3.3",
         "@types/redux-actions": "2.6.2",
@@ -85,7 +85,7 @@
         "postcss-loader": "7.3.3",
         "postcss-prefix-selector": "1.16.0",
         "postcss-scss": "4.0.6",
-        "react-refresh": "0.14.0",
+        "react-refresh": "0.16.0",
         "sass": "1.63.3",
         "sass-loader": "13.3.2",
         "source-map-loader": "4.0.1",
