Increase the repository version after update react to v19

--- a/example/package.json
+++ b/example/package.json
@@ -29,7 +29,7 @@
         "@babel/runtime": "7.22.5",
         "@react-ssr-pack/server": "*",
         "@react-ssr-pack/server-checker": "*",
-        "@react-ssr-pack/tools": "1.0.12",
+        "@react-ssr-pack/tools": "*",
         "classnames": "2.3.2",
         "history": "4.10.1",
         "html-react-parser": "5.2.2",
@@ -52,8 +52,8 @@
         "@babel/preset-env": "7.22.5",
         "@babel/preset-react": "7.26.3",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-        "@react-ssr-pack/babel-plugin": "1.0.13",
-        "@react-ssr-pack/resolve-plugin": "1.0.17",
+        "@react-ssr-pack/babel-plugin": "*",
+        "@react-ssr-pack/resolve-plugin": "*",
         "@types/history": "4.7.9",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
