--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,7 +1,12 @@
 {
     "presets": [
         "@babel/preset-env",
-        "@babel/preset-react"
+        [
+            "@babel/preset-react",
+            {
+                "runtime": "automatic"
+            }
+        ]
     ],
     "plugins": [
         "@babel/plugin-transform-runtime",
@@ -13,6 +18,7 @@
                 [
                     "@babel/preset-react",
                     {
+                        "runtime": "automatic",
                         "development": true
                     }
                 ]
