--- a/example/package.json
+++ b/example/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "@babel/runtime": "7.22.5",
         "@react-ssr-pack/portal": "*",
+        "@react-ssr-pack/redux-saga-handlers": "*",
         "@react-ssr-pack/server": "*",
         "@react-ssr-pack/server-checker": "*",
         "@react-ssr-pack/tools": "*",
