--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-ssr-pack-example",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "React SSR Pack - Example Application",
     "main": "./lib/index.js",
     "types": "./lib/index.d.ts",
@@ -27,11 +27,11 @@
     },
     "dependencies": {
         "@babel/runtime": "7.22.5",
-        "@react-ssr-pack/portal": "*",
-        "@react-ssr-pack/redux-saga-handlers": "*",
-        "@react-ssr-pack/server": "*",
-        "@react-ssr-pack/server-checker": "*",
-        "@react-ssr-pack/tools": "*",
+        "@react-ssr-pack/portal": "1.1.1",
+        "@react-ssr-pack/redux-saga-handlers": "1.1.1",
+        "@react-ssr-pack/server": "1.1.1",
+        "@react-ssr-pack/server-checker": "1.1.1",
+        "@react-ssr-pack/tools": "1.1.1",
         "classnames": "2.3.2",
         "history": "4.10.1",
         "html-react-parser": "5.2.2",
@@ -54,8 +54,8 @@
         "@babel/preset-env": "7.22.5",
         "@babel/preset-react": "7.26.3",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
-        "@react-ssr-pack/babel-plugin": "*",
-        "@react-ssr-pack/resolve-plugin": "*",
+        "@react-ssr-pack/babel-plugin": "1.1.1",
+        "@react-ssr-pack/resolve-plugin": "1.1.1",
         "@types/history": "4.7.9",
         "@types/react": "19.0.8",
         "@types/react-dom": "19.0.3",
